# nn-c

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  nn.c  nn.h  operation.h
src/linear-algebra/: cuda_matrix.h  cuda_vec.h  matrix.c  matrix.cu  matrix.cuh  matrix.h  real.h  vec.c  vec.cu  vec.cuh  vec.h
src/nn/: cuda_nn.h  nn.c  nn.cu  nn.h
src/nn_layers/: activation_function.cu  activation_function.cuh  cuda_activation_function.h  cuda_nn_layer.h  identity_layer.c  identity_layer.h  nn_layer.h  relu_layer.c  relu_layer.h  sigmoid_layer.c  sigmoid_layer.h
src/print/: print.c  print.h
src/rand/: rand_float.c  rand_float.h
src/square_error/: square_error.c  square_error.h
